--- a/MainControlBoard.ioc
+++ b/MainControlBoard.ioc
@@ -188,42 +188,48 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
-RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
-RCC.AHBFreq_Value=12500000
-RCC.APB1Freq_Value=12500000
-RCC.APB1TimFreq_Value=12500000
-RCC.APB2Freq_Value=12500000
-RCC.APB2TimFreq_Value=12500000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_USART6_UART_Init-USART6-false-HAL-true
+RCC.AHBFreq_Value=25000000
+RCC.APB1Freq_Value=25000000
+RCC.APB1TimFreq_Value=25000000
+RCC.APB2Freq_Value=25000000
+RCC.APB2TimFreq_Value=25000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=12500000
-RCC.FCLKCortexFreq_Value=12500000
-RCC.FMPI2C1Freq_Value=12500000
+RCC.CortexFreq_Value=25000000
+RCC.FCLKCortexFreq_Value=25000000
+RCC.FMPI2C1Freq_Value=25000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=12500000
-RCC.IPParameters=AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.HCLKFreq_Value=25000000
+RCC.HSE_VALUE=25000000
+RCC.I2S1Freq_Value=150000000
+RCC.I2S2Freq_Value=150000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
 RCC.MCO2PinFreq_Value=25000000
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLI2SPCLKFreq_Value=96000000
-RCC.PLLI2SQCLKFreq_Value=96000000
-RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=96000000
-RCC.PLLRCLKFreq_Value=96000000
-RCC.PLLSAIPCLKFreq_Value=96000000
-RCC.PLLSAIQCLKFreq_Value=96000000
+RCC.PLLCLKFreq_Value=150000000
+RCC.PLLI2SPCLKFreq_Value=150000000
+RCC.PLLI2SQCLKFreq_Value=150000000
+RCC.PLLI2SRCLKFreq_Value=150000000
+RCC.PLLI2SoutputFreq_Value=150000000
+RCC.PLLQCLKFreq_Value=150000000
+RCC.PLLRCLKFreq_Value=150000000
+RCC.PLLSAIPCLKFreq_Value=150000000
+RCC.PLLSAIQCLKFreq_Value=150000000
+RCC.PLLSAIoutputFreq_Value=150000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=25000000
-RCC.SAIAFreq_Value=96000000
-RCC.SAIBFreq_Value=96000000
-RCC.SDIOFreq_Value=96000000
+RCC.SAIAFreq_Value=150000000
+RCC.SAIBFreq_Value=150000000
+RCC.SDIOFreq_Value=150000000
+RCC.SPDIFRXFreq_Value=150000000
 RCC.SYSCLKFreq_VALUE=25000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
-RCC.USBFreq_Value=96000000
-RCC.VCOI2SInputFreq_Value=1000000
-RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
-RCC.VCOSAIInputFreq_Value=1000000
-RCC.VCOSAIOutputFreq_Value=192000000
+RCC.USBFreq_Value=150000000
+RCC.VCOI2SInputFreq_Value=1562500
+RCC.VCOI2SOutputFreq_Value=300000000
+RCC.VCOInputFreq_Value=1562500
+RCC.VCOOutputFreq_Value=300000000
+RCC.VCOSAIInputFreq_Value=1562500
+RCC.VCOSAIOutputFreq_Value=300000000
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
@@ -265,7 +271,8 @@ UART4.VirtualMode=Asynchronous
 UART5.BaudRate=9600
 UART5.IPParameters=VirtualMode,BaudRate
 UART5.VirtualMode=Asynchronous
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=115200
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=4800
 USART2.IPParameters=VirtualMode,BaudRate
