--- a/MainControlBoard.ioc
+++ b/MainControlBoard.ioc
@@ -6,7 +6,6 @@ Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP10=USART6
 Mcu.IP2=SYS
 Mcu.IP3=TIM3
 Mcu.IP4=TIM4
@@ -15,7 +14,7 @@ Mcu.IP6=UART5
 Mcu.IP7=USART1
 Mcu.IP8=USART2
 Mcu.IP9=USART3
-Mcu.IPNb=11
+Mcu.IPNb=10
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -72,7 +71,6 @@ NVIC.UART5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART6_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Mode=Asynchronous
@@ -147,12 +145,15 @@ PC12.Mode=Asynchronous
 PC12.Signal=UART5_TX
 PC13.Mode=SYS_WakeUp1
 PC13.Signal=SYS_WKUP1
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=Debug1
 PC6.Locked=true
-PC6.Mode=Asynchronous
-PC6.Signal=USART6_TX
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=PinState,GPIO_Label
+PC7.GPIO_Label=Debug2
 PC7.Locked=true
-PC7.Mode=Asynchronous
-PC7.Signal=USART6_RX
+PC7.PinState=GPIO_PIN_RESET
+PC7.Signal=GPIO_Output
 PD2.Locked=true
 PD2.Mode=Asynchronous
 PD2.Signal=UART5_RX
@@ -188,7 +189,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_USART6_UART_Init-USART6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.AHBFreq_Value=25000000
 RCC.APB1Freq_Value=25000000
 RCC.APB1TimFreq_Value=25000000
@@ -271,7 +272,7 @@ UART4.VirtualMode=Asynchronous
 UART5.BaudRate=9600
 UART5.IPParameters=VirtualMode,BaudRate
 UART5.VirtualMode=Asynchronous
-USART1.BaudRate=115200
+USART1.BaudRate=57600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=4800
@@ -280,9 +281,6 @@ USART2.VirtualMode=VM_ASYNC
 USART3.BaudRate=9600
 USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
-USART6.BaudRate=9600
-USART6.IPParameters=VirtualMode,BaudRate
-USART6.VirtualMode=VM_ASYNC
 VP_SYS_VS_tim14.Mode=TIM14
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
 board=custom
