--- a/MainControlBoard.ioc
+++ b/MainControlBoard.ioc
@@ -41,13 +41,14 @@ Mcu.Pin27=PB8
 Mcu.Pin28=PB9
 Mcu.Pin29=VP_SYS_VS_tim14
 Mcu.Pin3=PC0
+Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PC1
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=30
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -251,22 +252,24 @@ TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4
-TIM3.Period=12499
-TIM3.Pulse-PWM\ Generation1\ CH1=6250
-TIM3.Pulse-PWM\ Generation2\ CH2=6250
-TIM3.Pulse-PWM\ Generation3\ CH3=6250
-TIM3.Pulse-PWM\ Generation4\ CH4=6250
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,Prescaler
+TIM3.Period=20000-1
+TIM3.Prescaler=25000000/1000000
+TIM3.Pulse-PWM\ Generation1\ CH1=0
+TIM3.Pulse-PWM\ Generation2\ CH2=0
+TIM3.Pulse-PWM\ Generation3\ CH3=0
+TIM3.Pulse-PWM\ Generation4\ CH4=0
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4
-TIM4.Period=12499
-TIM4.Pulse-PWM\ Generation1\ CH1=6250
-TIM4.Pulse-PWM\ Generation2\ CH2=6250
-TIM4.Pulse-PWM\ Generation3\ CH3=6250
-TIM4.Pulse-PWM\ Generation4\ CH4=6250
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,Prescaler
+TIM4.Period=20000-1
+TIM4.Prescaler=25000000/1000000
+TIM4.Pulse-PWM\ Generation1\ CH1=0
+TIM4.Pulse-PWM\ Generation2\ CH2=0
+TIM4.Pulse-PWM\ Generation3\ CH3=0
+TIM4.Pulse-PWM\ Generation4\ CH4=0
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
 UART5.BaudRate=9600
@@ -283,5 +286,7 @@ USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_tim14.Mode=TIM14
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
